--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,12 +16,19 @@ body, input, button {
 header {
   width: 100%;
   position: fixed;
-  padding: 15px;
+  padding: 20px 15px;
   top: 0;
   left: 0;
   z-index: 5;
   background: #936cff;
   box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
+}
+
+.header-title {
+    font-size: 26px;
+    font-weight: bolder;
+    color: #fff;
+    padding-bottom: 10px;
 }
 
 header input {
