--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,9 +22,10 @@ header {
   z-index: 5;
   background: #936cff;
   box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
+  transition: 0.3s;
 }
 
-.header-title {
+header h1 {
     font-size: 26px;
     font-weight: bolder;
     color: #fff;
@@ -85,13 +86,13 @@ header button svg .fill {
 
 .container {
   max-width: 760px;
-  margin: 0 auto;
+  margin: 0px auto;
  
 }
 
 .container2 {
     max-width: 760px;
-    margin: 65px auto;
+    margin: 90px auto;
     transition: 0.2s;
 }
 
@@ -220,7 +221,7 @@ ul.todo#completed {
   margin-top: 15px;
 }
 
-.complete-title {
+h2 {
     font-size: 22px;
     font-weight: 600;
 }
