--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,243 +1,202 @@
 @charset "UTF-8";
-
 body {
-  background: #edf0f1;
-  padding: 80px 0 0 0;
+	background: #edf0f1;
+	padding: 80px 0 0 0;
 }
-
 body, input, button {
-  font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
-
 .noFill {
-  fill: none;
+	fill: none;
 }
-
 header {
-  width: 100%;
-  position: fixed;
-  padding: 20px 15px;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  background: #936cff;
-  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
-  transition: 0.3s;
+	width: 100%;
+	position: fixed;
+	padding: 20px 15px;
+	top: 0;
+	left: 0;
+	z-index: 5;
+	background: #936cff;
+	box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
+	transition: 0.3s;
 }
-
 header h1 {
-    font-size: 26px;
-    font-weight: bolder;
-    color: #fff;
-    padding-bottom: 10px;
+	font-size: 26px;
+	font-weight: bolder;
+	color: #fff;
+	padding-bottom: 10px;
 }
-
 header input {
-  width: 100%;
-  height: 50px;
-  float: left;
-  color: #fff;
-  font-size: 15px;
-  font-weight: 400;
-  text-indent: 18px;
-  padding: 0 60px 0 0;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 7px;
-  border: 0px;
-  box-shadow: none;
-  outline: none;
-
-  -webkit-appearance: none;
-  -moz-appearance: none;
+	width: 100%;
+	height: 50px;
+	float: left;
+	color: #fff;
+	font-size: 15px;
+	font-weight: 400;
+	text-indent: 18px;
+	padding: 0 60px 0 0;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 7px;
+	border: 0px;
+	box-shadow: none;
+	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 }
-
 header input::-webkit-input-placeholder {
-  color: rgba(255, 255, 255, 0.75);
+	color: rgba(255, 255, 255, 0.75);
 }
-
 header input:-moz-input-placeholder {
-  color: rgba(255, 255, 255, 0.75);
+	color: rgba(255, 255, 255, 0.75);
 }
-
 header input::-moz-input-placeholder {
-  color: rgba(255, 255, 255, 0.75);
+	color: rgba(255, 255, 255, 0.75);
 }
-
 header input:-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.75);
+	color: rgba(255, 255, 255, 0.75);
 }
-
 header button {
-  display: none;
+	display: none;
 }
-
 header button svg {
-  width: 16px;
-  height: 16px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -8px 0 0 -8px;
+	width: 16px;
+	height: 16px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -8px 0 0 -8px;
 }
-
 header button svg .fill {
-  fill: #25b99a;
+	fill: #25b99a;
 }
-
 .container {
-  max-width: 760px;
-  margin: 0px auto;
+	max-width: 760px;
+	margin: 0px auto;
 }
-
 .container2 {
-    max-width: 760px;
-    margin: 90px auto;
-    transition: 0.2s;
+	max-width: 760px;
+	margin: 90px auto;
+	transition: 0.2s;
 }
-
 @media only screen and (max-width: 790px) {
-    .container2 {
-        padding-left: 15px;
-        padding-right: 15px;
-    }as
+	.container2 {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+	as
 }
-
 ul.todo {
-  width: 100%;
-  float: left;
+	width: 100%;
+	float: left;
 }
-
 ul.todo#todo {
-    margin-top: 15px;
-    margin-bottom: 40px;
+	margin-top: 15px;
+	margin-bottom: 40px;
 }
-
 ul.todo li {
-  width: 100%;
-  min-height: 52px;
-  float: left;
-  font-size: 17px;
-  font-weight: 500;
-  color: #444;
-  line-height: 22px;
-  background: #fff;
-  border-radius: 6px;
-  position: relative;
-  box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
-  margin: 0 0 12px 0;
-  padding: 14px 100px 14px 14px;
-  word-break: break-word;
+	width: 100%;
+	min-height: 52px;
+	float: left;
+	font-size: 17px;
+	font-weight: 500;
+	color: #444;
+	line-height: 22px;
+	background: #fff;
+	border-radius: 6px;
+	position: relative;
+	box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
+	margin: 0 0 12px 0;
+	padding: 14px 100px 14px 14px;
+	word-break: break-word;
 }
-
 ul.todo li:last-of-type {
-  margin: 0;
+	margin: 0;
 }
-
 ul.todo li .buttons {
-  width: 100px;
-  height: 50px;
-
-  position: absolute;
-  top: 0;
-  right: 0;
+	width: 100px;
+	height: 50px;
+	position: absolute;
+	top: 0;
+	right: 0;
 }
-
 ul.todo li .buttons button {
-  width: 50px;
-  height: 50px;
-  float: left;
-  background: none;
-  position: relative;
-  border: 0px;
-  box-shadow: none;
-  outline: none;
-  cursor: pointer;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+	width: 50px;
+	height: 50px;
+	float: left;
+	background: none;
+	position: relative;
+	border: 0px;
+	box-shadow: none;
+	outline: none;
+	cursor: pointer;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 }
-
 ul.todo li .buttons button:last-of-type:before {
-  content: '';
-  width: 1px;
-  height: 30px;
-  background: #edf0f1;
-
-  position: absolute;
-  top: 10px;
-  left: 0;
+	content: '';
+	width: 1px;
+	height: 30px;
+	background: #edf0f1;
+	position: absolute;
+	top: 10px;
+	left: 0;
 }
-
 ul.todo li .buttons button svg {
-  width: 22px;
-  height: 22px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -11px 0 0 -11px;
+	width: 22px;
+	height: 22px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -11px 0 0 -11px;
 }
-
 ul.todo li .buttons button.complete svg {
-  border-radius: 11px;
-  border: 1.5px solid #25b99a;
-  transition: background 0.2s ease;
+	border-radius: 11px;
+	border: 1.5px solid #25b99a;
+	transition: background 0.2s ease;
 }
-
 ul.todo#completed li .buttons button.complete svg {
-  background: #25b99a;
-  border: 0px;
+	background: #25b99a;
+	border: 0px;
 }
-
 ul.todo:not(#completed) li .buttons button.complete:hover svg {
-  background: rgba(37, 185, 154, 0.75);
+	background: rgba(37, 185, 154, 0.75);
 }
-
 ul.todo:not(#completed) li .buttons button.complete:hover svg .fill {
-  fill: #fff;
+	fill: #fff;
 }
-
 ul.todo#completed li .buttons button.complete svg .fill {
-  fill: #fff;
+	fill: #fff;
 }
-
 ul.todo li .buttons button svg .fill {
-  transition: fill 0.2s ease;
+	transition: fill 0.2s ease;
 }
-
 ul.todo li .buttons button.remove svg .fill {
-  fill: #c0cecb;
+	fill: #c0cecb;
 }
-
 ul.todo li .buttons button.remove:hover svg .fill {
-  fill: #e85656;
+	fill: #e85656;
 }
-
 ul.todo li .buttons button.complete svg .fill {
-  fill: #25b99a;
+	fill: #25b99a;
 }
-
 ul.todo#completed {
-  position: relative;
-  margin-top: 15px;
+	position: relative;
+	margin-top: 15px;
 }
-
 h2 {
-    font-size: 22px;
-    font-weight: 600;
+	font-size: 22px;
+	font-weight: 600;
 }
-
 ul.todo#todo:empty:after {
-  content: 'You have no Tasks to do';
+	content: 'You have no Tasks to do';
 }
-
 ul.todo#completed:empty:after {
-  content: 'No Tasks done';
+	content: 'No Tasks done';
 }
-
-ul.todo#todo:after,
-ul.todo#completed:after {
-  width: 100%;
-  display: block;
-  text-align: center;
-  font-size: 14px;
-  color: #aaa;
+ul.todo#todo:after,ul.todo#completed:after {
+	width: 100%;
+	display: block;
+	text-align: center;
+	font-size: 14px;
+	color: #aaa;
 }
